manifest/user_management/usermanagementdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement
  namespace: usermanagement
  labels:
    app: usermanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermanagement
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      containers:
      - name: usermanagement
        image: vapprtech/usermanagement-openjdk:11
        ports:
        - name: https
          containerPort: 8082
