manifest/user_management/usermanagementservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagement
  namespace: usermanagement
  labels:
    app: usermanagement
spec:
  type: LoadBalancer
  ports:
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app: user_management
